Login page is working properly

--- a/TechFE/src/app/app.component.html
+++ b/TechFE/src/app/app.component.html
@@ -300,21 +300,48 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
+  
   <span>Bienvenido</span>
-    <div class="spacer"></div>
+    
 </div>
 
 <div class="content" role="main">
 
-  <!-- Highlight Card -->
-  <div class="card highlight-card card-small">
+ <div class="col-md-6 offset-md-3 mt-5">
+    <div class="alert alert-info">
+        Username: test<br />
+        Password: test<br />
+    </div>
+	<h4 class="card-header">Bienvenido, ingresa tus credenciales</h4>
+	<br/>
+    <div class="card">
+        
+        <div class="card-body">
+            <form  >
+                <div class="form-group">
+                    <label for="username">Usuario</label>
+                    <input type="text" formControlName="username" class="form-control"  />
+                  
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" formControlName="password" class="form-control"  />
+                    
+                </div>
+                <button  class="btn btn-primary">
+                    Ingresar
+                </button>
+                
+            </form>
+        </div>
+    </div>
+</div>
 
 
-    <span>{{ title }} </span>
-
-  </div>
 
 </div>
+
+
 
 
 <router-outlet></router-outlet>
